--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "practicum",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Educational platform",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve --mode development"
+    "dev": "webpack serve --mode development",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
-  "author": "",
+  "keywords": [],
+  "author": "Elise Bouer",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "7.18.9",
@@ -17,6 +20,7 @@
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "6.7.1",
     "cssnano": "5.1.12",
+    "gh-pages": "^6.0.0",
     "html-webpack-plugin": "5.5.0",
     "mini-css-extract-plugin": "2.6.1",
     "postcss-loader": "7.0.1",
